--- a/work_style.css
+++ b/work_style.css
@@ -24,6 +24,11 @@
 - Clearing
 - Media Queries
 */
+/*
+________________________________________________________
+CUSTOM
+*/
+
 
 #nav{
   width:90%;
@@ -36,6 +41,10 @@ a{
 h5{
   font-family: 'Pacifico', cursive;
   font-size:40px;"
+}
+
+.bottomLink{
+  margin-bottom:0px !important;
 }
 
 /* CAROUSEL
@@ -350,7 +359,17 @@ there.
 @media (min-width: 550px) {}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+  .textLeft{
+    font-size:30px;
+  }
+  p{
+    color:red;
+  }
+  div{
+    color:red;
+  }
+}
 
 /* Larger than desktop */
 @media only screen and (min-width: 1000px) {
@@ -360,6 +379,7 @@ there.
   .category{
     font-size:100px;
   }
+
 }
 
 /* Larger than Desktop HD */
